# esp32-home-automation

./: .gitignore  README.md  platformio.ini  setup.cfg  test_basic_functionality.cpp  test_hardware_detection.cpp  volume_control_config.json
docs/: OTA_UPDATE_GUIDE.md  version.json
include/: config.h  config_manager.h  diagnostic_interface.h  failsafe.h  hardware_detection.h  ir_handler.h  led_effects.h  module_system.h  motor_control.h  mqtt_handler.h  ota_updater.h  relay_control.h  system_monitor.h  touch_handler.h
python/: README.md  logging_config.json  main.py  requirements.txt  service_installer.py  setup_pc_integration.py  start_volume_control.bat  volume_control_config.json
python/modules/: __init__.py  app.py  config.py  constants.py  diagnostics.py  mqtt_client.py  system_monitor.py  tray_ui.py  volume_controller.py
src/: buildlink_stubs.cpp  compat_wrappers.cpp  config_manager.cpp  diagnostic_interface.cpp  diagnostic_stubs.cpp  diagnostic_ui_stubs.cpp  failsafe.cpp  hardware_detection.cpp  ir_handler.cpp  led_effects.cpp  led_effects_globals.cpp  main.cpp  messaging_stubs.cpp  module_system.cpp  module_wrappers.cpp  motor_control.cpp  mqtt_handler.cpp  ota_ui_stubs.cpp  ota_updater.cpp  relay_control.cpp  system_monitor.cpp  touch_handler.cpp  ui_helpers.cpp
