[metadata]
name = esp32-volume-control
version = 2.1.0
author = DJ Kruger
description = ESP32 ↔ PC bidirectional volume control via MQTT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourname/esp32-volume-control   # optional

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires =
    pycaw
    paho-mqtt
    comtypes
    psutil
    pystray
    pillow
    wmi; platform_system=="Windows"
    pywin32; platform_system=="Windows"

[options.entry_points]
console_scripts =
    esp32-volume-control = esp32_volume_control.main:main
